Corrected translation of 成就遊 in MA sutras to "accomplish and dwell" and edited passages involved as needed.

--- a/01_agama/madhyama/MA_002.md
+++ b/01_agama/madhyama/MA_002.md
@@ -44,24 +44,24 @@ next: MA_003.html
 10\. “Furthermore, when he shaves off their hair, puts on the reddish-brown robes, attains faith, leaves home, goes homeless, and trains on the path, the noble disciple is called ‘dropping leaves.’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree dropping its leaves.
 {: #p10}
 
-11\. “Furthermore, the noble disciple parts with desire and bad and unskillful things.[\[8\]](#n8){:#ref8} With perception and examination,[\[9\]](#n9){:#ref9} this seclusion produces joy and happiness, and he attains accomplishment of the first dhyāna.[\[10\]](#n10){:#ref10} The noble disciple then is called ‘growing back leaves.’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree growing back its leaves.
+11\. “Furthermore, the noble disciple parts with desire and bad and unskillful things.[\[8\]](#n8){:#ref8} With perception and examination,[\[9\]](#n9){:#ref9} this seclusion produces joy and happiness, and he accomplishes and dwells in the first dhyāna.[\[10\]](#n10){:#ref10} The noble disciple then is called ‘growing back leaves.’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree growing back its leaves.
 {: #p11}
 
-12\. “Furthermore, once perception and examination have stopped, the noble disciple has an inner stillness and unified mind. Without perception or examination, this samādhi produces joy and happiness, and he attains accomplishment of the second dhyāna. The noble disciple then is called ‘growing webs [of buds].’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree growing webs [of buds].
+12\. “Furthermore, once perception and examination have stopped, the noble disciple has an inner stillness and unified mind. Without perception or examination, this samādhi produces joy and happiness, and he accomplishes and dwells in the second dhyāna. The noble disciple then is called ‘growing webs [of buds].’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree growing webs [of buds].
 {: #p12}
 
-13\. “Furthermore, the noble disciple parts with joy and desire, and he arrives at equanimity and pursues nothing. With right mindfulness and right knowledge, he personally experiences the happiness which is described by noble people as noble equanimity, mindfulness, happy abiding, and emptiness,[\[11\]](#n11){:#ref11} and he attains accomplishment of the third dhyāna. The noble disciple then is called ‘growing [buds] like bird beaks.’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree growing [buds] like bird beaks.
+13\. “Furthermore, the noble disciple parts with joy and desire, and he arrives at equanimity and pursues nothing. With right mindfulness and right knowledge, he personally experiences the happiness which is described by noble people as noble equanimity, mindfulness, happy abiding, and emptiness,[\[11\]](#n11){:#ref11} and he accomplishes and dwells in the third dhyāna. The noble disciple then is called ‘growing [buds] like bird beaks.’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree growing [buds] like bird beaks.
 {: #p13}
 
-14\. “Furthermore, the noble disciple’s pleasure ceases and his pain ceases. The basis of joy and sorrow having ceased, he’s neither discomforted nor delighted. Equanimous, mindful, and pure, he attains accomplishment of the fourth dhyāna. The noble disciple then is called ‘growing like a bowl.’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree [buds growing] like bowls.
+14\. “Furthermore, the noble disciple’s pleasure ceases and his pain ceases. The basis of joy and sorrow having ceased, he’s neither discomforted nor delighted. Equanimous, mindful, and pure, he accomplishes and dwells in the fourth dhyāna. The noble disciple then is called ‘growing like a bowl.’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree [buds growing] like bowls.
 {: #p14}
 
-15\. “Furthermore, once the noble disciple’s contaminants have ended, his mind is liberated, and his wisdom is liberated. In the present life, he knows and recognizes for himself the accomplishment of this realization: ‘Birth has been ended, the religious practice has been established, the task has been accomplished. I truly know that I’m no longer subject to existence.’ The noble disciple then is called ‘in full bloom.’ They’re like the Trāyastriṃśa Heaven’s pārijāta tree in full bloom.
+15\. “Furthermore, once the noble disciple’s contaminants have ended, his mind is liberated, and his wisdom is liberated. In the present life, he accomplishes and dwells in his own knowledge, perception, and realization: ‘Birth has been ended, the religious practice has been established, the task has been accomplished. I truly know that I’m no longer subject to existence.’ The noble disciple then is called ‘in full bloom.’ They’re like the Trāyastriṃśa Heaven’s pārijāta tree in full bloom.
 {: #p15}
 
 #### Conclusion
 
-16\. “He becomes an arhat monk whose contaminants are ended. The Trāyastriṃśa gods assemble in the Sudharmā Meeting Hall, sigh admiringly, and praise him, ‘Some worthy disciple at some town [422c] shaved off his hair, put on the reddish-brown robes, became faithful, left home, went homeless, and trained on the path. Once his contaminants had ended, his mind was liberated, and his wisdom was liberated. In the present life, he knows and recognizes for himself the accomplishment of this realization: ‘Birth has been ended, the religious practice has been established, the task has been accomplished, and I know as it really is that I’m no longer subject to existence.’
+16\. “He becomes an arhat monk whose contaminants are ended. The Trāyastriṃśa gods assemble in the Sudharmā Meeting Hall, sigh admiringly, and praise him, ‘Some worthy disciple at some town [422c] shaved off his hair, put on the reddish-brown robes, became faithful, left home, went homeless, and trained on the path. Once his contaminants had ended, his mind was liberated, and his wisdom was liberated. In the present life, he accomplishes and dwells in his own knowledge, perception, and realization: ‘Birth has been ended, the religious practice has been established, the task has been accomplished, and I truly know that I’m no longer subject to existence.’
 {: #p16}
 
 17\. “This is called the assembly that coincides with the end of an arhat’s contaminants, which is like the festival held under the Trāyastriṃśa Heaven’s pārijāta tree.”
@@ -88,7 +88,7 @@ next: MA_003.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 19 June 2022
 {: .revised}
 
 ---
