--- a/01_agama/madhyama/MA_009.md
+++ b/01_agama/madhyama/MA_009.md
@@ -145,7 +145,7 @@ He answered, “Good man, if the Bhagavān, the ascetic Gautama, declared that n
 
 Venerable Pūrṇa Maitrāyaniputra answered, “Good man, I’m called Pūrṇa. My mother’s name was Maitrāyani, so religious practitioners call me Pūrṇa Maitrāyaniputra.”
 
-34\. Venerable Śāriputra praised him, “Good, good! The good man Pūrṇa Maitrāyaniputra is a disciple of the Tathāgata who’s been made intelligent, insightful, and discerning by him. He’s peaceful, fearless, accomplished, and disciplined. He has gained great eloquence, attained the banner of immortality, and has himself realized the accomplishment of the immortal element. That’s because this good man gives complete answers when asked about profound subjects.
+34\. Venerable Śāriputra praised him, “Good, good! The good man Pūrṇa Maitrāyaniputra is a disciple of the Tathāgata who’s been made intelligent, insightful, and discerning by him. He’s peaceful, fearless, accomplished, and disciplined. He has gained great eloquence, attained the banner of immortality, and accomplishes and dwells in his own realization of the immortal element. That’s because this good man gives complete answers when asked about profound subjects.
 {:#p34}
 
 35\. “Venerable Pūrṇa Maitrāyaniputra, religious practitioners attain great rewards when they meet the Venerable Pūrṇa Maitrāyaniputra, go to see him at appropriate times, and venerate him at appropriate times. Now, I’ve also attained a great reward from going to see him at an appropriate time and venerating him at an appropriate time. Should religious practitioners wrap a cloth around the top of their heads and carry Venerable Pūrṇa Maitrāyaniputra, they’d attain great rewards. Now, I’ve also attained a great reward from going to see him at an appropriate time and venerating him at an appropriate time.”
@@ -160,7 +160,7 @@ Venerable Pūrṇa Maitrāyaniputra answered, “Good man, I’m called Pūrṇa
 38\. Venerable Pūrṇa Maitrāyaniputra praised him, “Now, I didn’t know I was talking to this disciple of the Bhagavān. I didn’t know I was talking to the second-most honored one. I didn’t know I was talking to the Dharma general. I didn’t know I was talking to the disciple who turned the Dharma wheel again. If I knew this was Venerable Śāriputra, I wouldn’t have been able to answer a single thing. How could I have given a discourse as profound as that?
 {:#p38}
 
-39\. “Good, good! Venerable Śāriputra is a disciple of the Tathāgata who’s been made intelligent, insightful, and discerning by him. He’s peaceful, fearless, accomplished, and disciplined. He has gained great eloquence, attained the banner of immortality, and himself realized the accomplishment of the immortal element. That’s because the venerable asks profound questions.
+39\. “Good, good! Venerable Śāriputra is a disciple of the Tathāgata who’s been made intelligent, insightful, and discerning by him. He’s peaceful, fearless, accomplished, and disciplined. He has gained great eloquence, attained the banner of immortality, and accomplished and dwelt in his own realization of the immortal element. That’s because the venerable asks profound questions.
 {:#p39}
 
 40\. “Venerable Śāriputra, religious practitioners attain great rewards when they meet the Venerable Śāriputra, go to see him at appropriate times, and venerate him at appropriate times. Now, I’ve also attained a great reward from going to see him at an appropriate time and venerating him at an appropriate time. Should religious practitioners wrap a cloth around the top of their heads and carry Venerable Śāriputra, they’d attain great rewards. Now, I’ve also attained a great reward from going to see him at an appropriate time and venerating him at an appropriate time.”
@@ -179,7 +179,7 @@ Venerable Pūrṇa Maitrāyaniputra answered, “Good man, I’m called Pūrṇa
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 17 March 2021
+Last Revised: 19 June 2022
 {: .revised}
 
 ---
