--- a/01_agama/madhyama/MA_015.md
+++ b/01_agama/madhyama/MA_015.md
@@ -52,7 +52,7 @@ next: MA_016.html
 14\. “Second is animosity. Bearing hatred in their mind, a person thinks, ‘That sentient being should be killed, bound, arrested, avoided, or chased away.’ That desire causes them to experience measureless suffering.
 {: #p14}
 
-15\. “Third is wrong view. A person’s views are mistaken, seeing it this way and saying, ‘There’s no giving, no observances, and no incantations. There are no good and bad acts, no results of good and bad acts, no present life or the next, and no father or mother. The world doesn’t have realized people who go to good abodes, who depart well and are headed well. Nor do they accomplish and dwell in their own knowledge, awakening, and realization of this life and the next.’
+15\. “Third is wrong view. A person’s views are mistaken, seeing it this way and saying, ‘There’s no giving, no observances, and no incantations. There are no good and bad acts, no results of good and bad acts, no present life or the next, and no father or mother. The world doesn’t have realized people who go to good abodes, who depart well and are headed well. Nor do they accomplish and dwell in their own knowledge, perception, and realization of this world and the next.’
 {: #p15}
 
 16\. “These are known as the three intentional mental acts that are unskillful with painful effects and bring painful results.
@@ -61,7 +61,7 @@ next: MA_016.html
 17\. “A well-versed noble disciple abandons unskillful physical acts and cultivates skillful physical acts. They abandon unskillful verbal and mental acts and cultivate skillful verbal and mental acts. That well-versed noble disciple thus perfects their effort, precepts, and virtue. Accomplishing pure physical action and accomplishing pure verbal and mental action, they’re free of anger and quarreling. They shake off sleepiness, aren’t arrogant, end doubt, and are freed from pride.
 {: #p17}
 
-18\. “With right mindfulness and right knowledge, they lack foolishness. They accomplish and dwell in one direction pervaded with mind and kindness. They do this in two, three, and four directions, the four counterpoints, and up and down, pervading everywhere with their minds and kindness. Having no bonds, enmity, anger, or quarrel, they accomplish and dwell pervading the whole world, [their mind being] broad and vast, measureless, and well cultivated.
+18\. “With right mindfulness and right knowledge, they lack foolishness. They accomplish and dwell in one direction pervaded with mind and kindness. They do this in two, three, and four directions, the four counterpoints, and up and down, pervading everywhere with their mind and kindness. Having no bonds, enmity, anger, or quarrel, they accomplish and dwell in pervading the whole world, [their mind being] broad and vast, measureless, and well cultivated.
 {: #p18}
 
 19\. “They have this thought, ‘This mind of mine was small and not well cultivated in the past, but now this mind of mine is measureless and well cultivated.’ The well-versed noble disciple’s mind thus is measureless and well cultivated.
@@ -78,7 +78,7 @@ The monks answered, “No, Bhagavān. Why is that? They wouldn’t commit bad ac
 22\. “A monk should think, ‘I’ve been careless in the past and committed unskillful acts. I might experience the results of all of them in the present instead of in a later life.’ If he thus practices the liberation of kindness and [his mind becomes] measureless and well cultivated, he’ll surely become a non-returner or another high attainment.
 {: #p22}
 
-23\. “Thus, having no bonds, enmity, anger, or quarrel, they accomplish and dwell pervading the whole world with mind and sympathy … joy … equanimity, [their minds being] broad, vast, measureless, and well cultivated.
+23\. “Thus, having no bonds, enmity, anger, or quarrel, they accomplish and dwell in pervading the whole world with mind and sympathy … joy … equanimity, [their minds being] broad, vast, measureless, and well cultivated.
 {: #p23}
 
 24\. “They have this thought, ‘This mind of mine was small and not well cultivated in the past, but now this mind of mine is measureless and well cultivated.’ The well-versed noble disciple’s mind thus is measureless and well cultivated.
@@ -107,7 +107,7 @@ The monks answered, “The monks answered, “No, Bhagavān. Why is that? They w
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 19 June 2022
 {: .revised}
 
 ---
