--- a/01_agama/madhyama/MA_016.md
+++ b/01_agama/madhyama/MA_016.md
@@ -18,7 +18,7 @@ next: MA_017.html
 2\. It was then that the Kālāma people of \*Keśaputra heard: “The ascetic Gautama from the Śākya clan renounced the Śākya dynasty, left home, and trained on the path. He has traveled to the country of the Kālāmas and arrived at \*Keśaputra with a great assembly of monks. They are staying in the rosewood grove north of the town.
 {:#p2}
 
-3\. “The ascetic Gautama has a great reputation that’s widely heard in the ten directions: ‘The ascetic Gautama is a Tathāgata, Arhat, and Fully Awakened One who is accomplished in knowledge and conduct, well gone, an understander of the world, an unsurpassed man, a trainer in the principles of the path, a teacher to gods and humans, and called the Buddha, the Blessed One. Among the gods Māra and Brahmā and the ascetics and priests of this world, from humans up to the gods, his own knowledge and awakening was self-realized and fully accomplished. When he teaches the Dharma, it’s good in the beginning, middle, and end, both its meaning and words are complete and pure, and it demonstrates the religious practice. If someone meets the Tathāgata, Arhat, and Fully Awakened One and honors, venerates, makes offerings, and serves him, they will quickly attain good benefits.’”
+3\. “The ascetic Gautama has a great reputation that’s widely heard in the ten directions: ‘The ascetic Gautama is a Tathāgata, Arhat, and Fully Awakened One who is accomplished in knowledge and conduct, well gone, an understander of the world, an unsurpassed man, a trainer in the principles of the path, a teacher to gods and humans, and called the Buddha, the Blessed One. Among the gods Māra and Brahmā and the ascetics and priests of this world, from humans up to the gods, he accomplished and dwells in his own knowledge, perception, and realization. When he teaches the Dharma, it’s good in the beginning, middle, and end, both its meaning and words are complete and pure, and it demonstrates the religious practice. If someone meets the Tathāgata, Arhat, and Fully Awakened One and honors, venerates, makes offerings, and serves him, they will quickly attain good benefits.’”
 {:#p3}
 
 4\. “We should go together to see the ascetic Gautama to venerate and make offerings to him.”
@@ -74,7 +74,7 @@ next: MA_017.html
 20\. “Kālāmas, the well-versed noble disciple is free of hatred and stops hatred. With conscience, modesty, and compassion, they’re beneficial to all living things, even insects and worms. They purify their mind and rid it of hatred.
 {:#p20}
 
-21\. “Kālāmas, the well-versed noble disciple is free of wrong view and stops wrong view. They conduct themselves in right view and aren’t mistaken. Such is their view, and such is their speech: ‘There’s generosity, purification, and incantations. There’s the results of good and bad actions. There’s the present world and another world. There’s father and mother. The world truly has people who depart and go to good places, good departures, and good headings. In this world and another world, their own knowledge and awakening is self-realized and fully accomplished.’ They purify their mind and rid it of wrong views.
+21\. “Kālāmas, the well-versed noble disciple is free of wrong view and stops wrong view. They conduct themselves in right view and aren’t mistaken. Such is their view, and such is their speech: ‘There’s generosity, purification, and incantations. There’s the results of good and bad actions. There’s the present world and another world. There’s father and mother. The world truly has people who depart and go to good places, good departures, and good headings. In this world and the next, they accomplish and dwell in their own knowledge, perception, and realization.’ They purify their mind and rid it of wrong views.
 {:#p21}
 
 ### The Four Immeasurables
@@ -82,10 +82,10 @@ next: MA_017.html
 22\. “Thus, Kālāmas, the well-versed noble disciple achieves pure physical conduct and achieves pure verbal and mental conduct. They’re free of anger, free of dispute, and they get rid of drowsiness. Without agitation or arrogance, they end doubt and free themselves from pride. With right mindfulness and right knowledge, they have no delusions.
 {:#p22}
 
-23\. “Their mind fully pervades one direction with kindness. They do this in two, three, and four directions, the four counterpoints, up, and down. Their mind completely pervades them all with kindness. They are without bondage, enmity, anger, or dispute. Broadly, greatly, and measurelessly well cultivated, they fully pervade the whole world.
+23\. “They accomplish and dwell in one direction pervaded with mind and kindness. They do this in two, three, and four directions, the four counterpoints, up, and down, pervading everywhere with their mind and kindness. Having no bonds, enmity, anger, or quarrel, they accomplish and dwell in pervading the whole world, [their mind being] broad and vast, measureless, and well cultivated.
 {:#p23}
 
-24\. “Thus it is with compassion, joy, and equanimity. They are without bondage, without enmity, without anger, and without dispute. Broadly, greatly, and measurelessly well cultivated, they fully pervade the whole world.
+24\. “So it is with compassion, joy, and equanimity. Having no bonds, enmity, anger, or quarrel, they accomplish and dwell in pervading the whole world, [their mind being] broad and vast, measureless, and well cultivated.
 {:#p24}
 
 ### The Four Peaceful Dwellings
@@ -145,7 +145,7 @@ next: MA_017.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 19 June 2022
 {: .revised}
 
 ---
