--- a/01_agama/madhyama/MA_074.md
+++ b/01_agama/madhyama/MA_074.md
@@ -25,7 +25,7 @@ next: MA_075.html
 4\. The Bhagavān then awoke from that samādhi and praised Venerable Aniruddha. “Good, Aniruddha, good! You were in a peaceful place sitting in reflection. In your mind, you thought, ‘The path comes from having no desires; it’s not attained by having desires. The path comes from knowing what’s enough; it’s not obtained by lacking satisfaction. The path comes from seclusion; it’s not obtained by enjoying company, living with company, or joining with company. The path comes from diligence; it’s not obtained by indolence. The path comes from right mindfulness; it’s not obtained by wrong mindfulness. The path comes from a concentrated mind; it’s not obtained by a distracted mind. The path comes from wisdom; it’s not obtained by foolishness.’
 {: #p4}
 
-5\. “Aniruddha, you could accept an additional eighth thought of a great man from the Tathāgata. Accepting it, reflect that the path comes from non-frivolity, enjoying non-frivolity, and practicing non-frivolity; it’s not obtained by frivolity, enjoying frivolity, or practicing frivolity. Aniruddha, if you accomplish these eight thoughts of a great man, you’ll surely be able to part with desire and part with bad and unwholesome things *up to* attain the accomplishment of the fourth meditation.
+5\. “Aniruddha, you could accept an additional eighth thought of a great man from the Tathāgata. Accepting it, reflect that the path comes from non-frivolity, enjoying non-frivolity, and practicing non-frivolity; it’s not obtained by frivolity, enjoying frivolity, or practicing frivolity. Aniruddha, if you accomplish these eight thoughts of a great man, you’ll surely be able to part with desire and part with bad and unwholesome things *up to* accomplish and dwell in the fourth dhyāna.
 {: #p5}
 
 #### Eight Similes about the Eight Thoughts
@@ -89,7 +89,7 @@ next: MA_075.html
 24\. “How does the path come from right mindfulness and isn’t obtained by wrong mindfulness? A monk contemplates his inner body as body and contemplates his inner feelings, mind, and mental objects as mental objects. This is how the path comes from right mindfulness and isn’t obtained by wrong mindfulness.
 {: #p24}
 
-25\. “How does the path come from a concentrated mind and isn’t obtained by a distracted mind? A monk parts with desire and parts with bad and unwholesome things *up to* attains the accomplishment of the fourth meditation. This is how the path comes from a concentrated mind and isn’t obtained by a distracted mind.
+25\. “How does the path come from a concentrated mind and isn’t obtained by a distracted mind? A monk parts with desire and parts with bad and unwholesome things *up to* accomplish and dwell in the fourth dhyāna. This is how the path comes from a concentrated mind and isn’t obtained by a distracted mind.
 {: #p25}
 
 26\. “How does the path come from wisdom and isn’t obtained from foolishness? A monk cultivates wisdom. He contemplates the law of arising and decay and attains the noble wisdom and insight that accords with this knowledge. He discerns and comprehends it in order to correctly end suffering. This is how the path comes from wisdom and isn’t obtained from foolishness.
@@ -103,7 +103,7 @@ next: MA_075.html
 28\. “Monks, the monk Aniruddha has accomplished these eight thoughts of a great man, and afterwards he’ll spend a summer retreat in Cedi at Waterside Grove. With this teaching of mine, he lives alone in seclusion, his mind without carelessness, and cultivates diligence. After living there alone in seclusion, his mind being without carelessness, and cultivating diligence, he made himself a son of the clan. He shaved off his beard and hair, put on  reddish-brown robes, became faithful, left home, went homeless, and trained on the path.
 {: #p28}
 
-29\. “Only when the unsurpassed religious practice is finished will he know and recognize for himself in the present life the accomplishment of self-realization: ‘Birth has been ended, the religious practice has been established, and the task has been accomplished.’ He will no longer be subject to existence and know it as it really is.”
+29\. “Only when the unsurpassed religious practice is finished will he accomplish and dwell in his own knowledge, perception, and realization: ‘Birth has been ended, the religious practice has been established, the task has been accomplished. I truly know that I’m no longer subject to existence.’”
 {: #p29}
 
 30\. At this moment, Venerable Aniruddha became an arhat. His mind rightly liberated, he became an elder and honored one. It was then that he spoke these verses,
