--- a/01_agama/madhyama/MA_075.md
+++ b/01_agama/madhyama/MA_075.md
@@ -20,7 +20,7 @@ next: MA_076.html
 3\. “The well-versed noble disciple will perform this contemplation about what the Bhagavān has taught: ‘Desires are impermanent, fake, and false. These falsehoods then are illusory, deceptive, and foolish. Whether it’s desires in the present life, desires in the afterlife, forms in the present life, or forms in the afterlife, they are all the domain of Māra. They are Māra’s bait. As a result of them, the mind is affected by measureless bad and wholesome things, such as longing, anger, and fighting, which become obstacles when the noble disciple trains.’
 {:#p3}
 
-4\. “He thinks, ‘I could accomplish a great mental state by shutting out the world and collecting my mind. If I attain the accomplishment of a great mental state by shutting out the worldly and collecting my mind, such a mental state won’t readily produce the measureless bad and unwholesome things such as longing, anger, and fighting, which become obstacles when the noble disciple trains.’
+4\. “He thinks, ‘I could accomplish and dwell in a great mental state by shutting out the world and collecting my mind. If I accomplish and dwell in a great mental state by shutting out the worldly and collecting my mind, such a mental state won’t readily produce the measureless bad and unwholesome things such as longing, anger, and fighting, which become obstacles when the noble disciple trains.’
 {:#p4}
 
 5\. “With that practice and that training, he thus cultivates and expands [his mind], readily attaining mental purity in that abode. Attaining mental purity in that abode, the monk might attain entry into the imperturbable right there, or wisdom may be his release. Later, when his body breaks up and his life ends, he’ll surely arrive at the imperturbable as a result of that previous mentality. This is the first description of the pure way to the imperturbable.
@@ -104,7 +104,7 @@ The Bhagavān told him, “Ānanda, if a monk accepts nothing, he’ll surely at
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 19 June 2022
 {: .revised}
 
 ---
