--- a/01_agama/madhyama/MA_080.md
+++ b/01_agama/madhyama/MA_080.md
@@ -78,7 +78,7 @@ Venerable Aniruddha said, “Very well, Bhagavān!”
 17\. “Good men, I parted with taking what’s not given, stopped taking what’s not given, and took after something was given. I was happy with taking what was given and always liked generosity. Rejoicing in having no stinginess, I didn’t expect any reward. I purified my mind and rid it of taking what’s not given.
 {: #p17}
 
- 18\. “Good men, I parted with what’s not the religious life, stopped what’s not the religious life, and diligently cultivated the religious life. Diligent was my wondrous conduct. I was pure and undefiled, parted with desire and stopped lust. I purified my mind and rid it of what’s not the religious life.
+18\. “Good men, I parted with what’s not the religious life, stopped what’s not the religious life, and diligently cultivated the religious life. Diligent was my wondrous conduct. I was pure and undefiled, parted with desire and stopped lust. I purified my mind and rid it of what’s not the religious life.
 {: #p18}
 
 19\. “Good men, I parted with false speech, stopped false speech, and spoke truly. I enjoyed truth, abided in truth, and didn’t budge from it. I was believed by all and [552c] didn’t deceive the world. I purified my mind and rid it of false speech.
@@ -152,7 +152,7 @@ Venerable Aniruddha said, “Very well, Bhagavān!”
 41\. “Good men, after I was staying in a peaceful place, perhaps under a tree or in an empty and peaceful dwelling, I spread out my sitting mat and sat down crossed-legged. With correct posture and correct intent, I avoided what was contrary to mindfulness and put a stop to longing. Without any arguing, I saw another’s property and requirements for living without longing or wanting them for myself. I wished to make myself attain that, so I purified my mind and rid it of longing. *So it was* [553b] *with hatred, drowsiness, regret, and doubt.* It not having any resemblance to good qualities, I purified my mind and rid it of doubt.
 {: #p41}
 
-42\. “Good men, after I had stopped these five hindrances and mental defilements that weaken wisdom, I parted with desire and parted with bad and unwholesome things … attained the accomplishment of the fourth meditation.
+42\. “Good men, after I had stopped these five hindrances and mental defilements that weaken wisdom, I parted with desire and parted with bad and unwholesome things … accomplished and dwelled in the fourth dhyāna.
 {: #p42}
 
 43\. “Good men, after I had attained a concentrated mind in this way, I was pure, undefiled, untroubled, flexible, and well abiding. I attained an imperturbable mind and learned to realize the supernormal abilities and penetrating knowledges.
@@ -257,7 +257,7 @@ Venerable Aniruddha said, “Very well, Bhagavān!”
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 19 June 2022
 {: .revised}
 
 ---
