--- a/01_agama/madhyama/MA_081.md
+++ b/01_agama/madhyama/MA_081.md
@@ -40,7 +40,7 @@ The monks then said to the Bhagavān, “The Bhagavān is the Dharma root! The B
 
 The monks then accepted the teaching and listened.
 
-#### The 18 Practices
+#### The Eighteen Practices
 
 8\. The Buddha said, “How does a monk cultivate mindfulness of body? That monk walks and knows he’s walking. He stands and knows he’s standing, sits and knows he’s sitting, and lies down and knows he’s lying down. He sleeps and knows he’s sleeping, wakes and knows he’s waking, and he sleeps and wakes and knows he’s slept and woke up.
 {: #p8}
@@ -90,7 +90,7 @@ The monks then accepted the teaching and listened.
 23\. “Thus, a monk follows his physical actions, knowing the above as it truly is. If he thus goes into seclusion and lives alone, his thoughts aren’t careless. He cultivates diligence, stops mental disturbances, and attains a concentrated state of mind. After attaining a concentrated state of mind, he then knows the above as it truly is. This is called a monk who cultivates mindfulness of body.
 {: #p23}
 
-24\. “Furthermore, a monk cultivates mindfulness of body. What’s in that monk’s body is filled with the accomplishment of the mental freedom of a pure mind. There’s nowhere in his body that that pure mind doesn’t reach. He’s like a person wearing a seven- or eight-cubit robe. From head to toe, there’s no part of his body that isn’t covered. Thus, what’s in that monk’s body is filled with the accomplishment of the mental freedom of a pure mind. There’s nowhere in his body that that pure mind doesn’t reach.
+24\. “Furthermore, a monk cultivates mindfulness of body. He accomplishes and dwells in the resolve to pervade this body with pure mind. There’s nowhere in his body that that pure mind doesn’t reach. He’s like a person wearing a seven- or eight-cubit robe. From head to toe, there’s no part of his body that isn’t covered. Thus, what’s in that monk’s body is filled with the accomplishment of the mental freedom of a pure mind. There’s nowhere in his body that that pure mind doesn’t reach.
 {: #p24}
 
 25\. “Thus, a monk follows his physical actions, knowing the above as it truly is. If he thus goes into seclusion and lives alone, his thoughts aren’t careless. He cultivates diligence, stops mental disturbances, and attains a concentrated state of mind. After attaining a concentrated state of mind, he then knows the above as it truly is. This is called a monk who cultivates mindfulness of body.
