--- a/01_agama/madhyama/MA_098.md
+++ b/01_agama/madhyama/MA_098.md
@@ -73,7 +73,7 @@ next: MA_101.html
 20\. “Thus, a monk observes the internal body as body and observes the external body as body. He establishes mindfulness in body with knowing, seeing, insight, and comprehension. This is called a monk observing body as body.
 {:#p20}
 
-21\. “Furthermore, a monk observes body as body. What’s in that monk’s body is filled with the accomplishment of the mental freedom of a pure mind. There’s nowhere in his body that that pure mind doesn’t reach. He’s like a person wearing a seven- or eight-cubit robe. From head to toe, there’s no part of his body that isn’t covered. Thus, there’s nowhere in that monk’s body that that pure mind doesn’t reach.
+21\. “Furthermore, a monk observes body as body. He accomplishes and dwells in the resolve to pervade this body with pure mind. There’s nowhere in his body that that pure mind doesn’t reach. He’s like a person wearing a seven- or eight-cubit robe. From head to toe, there’s no part of his body that isn’t covered. Thus, there’s nowhere in that monk’s body that that pure mind doesn’t reach.
 {:#p21}
 
 22\. “Thus, a monk observes the internal body as body and observes the external body as body. He establishes mindfulness in body with knowing, seeing, insight, and comprehension. This is called a monk observing body as body.
@@ -193,7 +193,7 @@ next: MA_101.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 19 June 2022
 {: .revised}
 
 ---
