--- a/01_agama/madhyama/MA_146.md
+++ b/01_agama/madhyama/MA_146.md
@@ -63,7 +63,7 @@ Pilotika replied, “So it is, priest! So it is! I support the Bhagavān a great
 15\. “Priest, that skilled elephant trainer still might not feel confident. There’s another elephant mother named [Vāmanikā] in this forest. She’s very tall and huge, and she possesses such a footprint. Searching for this footprint, he again sees a large elephant print. Seeing it, he believes that the footprint belongs to a huge elephant. After searching for this footprint, he sees that this large elephant print is very long and wide, circular, and sunk into the earth, and he sees that elephant, either when it’s coming, going, standing, or walking. Perhaps it’s standing up or laying down. After he sees that elephant, the trainer thinks, ‘If it has this footprint, that surely is the huge elephant.’
 {:#p15}
 
-16\. “Thus, priest, a Tathāgata, Arhat, and Completely Awakened One arises in the world who’s accomplished in knowledge and conduct, well gone, an understander of the world, an unsurpassed man, a trainer in the principles of the path, a teacher to gods and humans, and called the Buddha, the Blessed One. Among the gods, Māra, Brahmā, ascetics, and priests of this world, from humans up to the gods, [657a] his own knowledge and awakening was accomplished with this self-realization: ‘My births have ended, the religious practice has been established, and the task has been accomplished. I’ll not be subject to existence any longer, and I know it as it truly is.’
+16\. “Thus, priest, a Tathāgata, Arhat, and Completely Awakened One arises in the world who’s accomplished in knowledge and conduct, well gone, an understander of the world, an unsurpassed man, a trainer in the principles of the path, a teacher to gods and humans, and called the Buddha, the Blessed One. Among the gods, Māra, Brahmā, ascetics, and priests of this world, from humans up to the gods, [657a] he accomplished and dwells in his own knowledge, perception, and realization: ‘Birth has been ended, the religious practice has been established, the task has been accomplished. I truly know that I’m no longer subject to existence.’
 {:#p16}
 
 17\. “He explains a teaching that’s wonderful in the beginning, middle, and end. Both its meaning and words are complete and pure, and it demonstrates the religious practice. When he explains the teaching to a householder or a householder’s son, they become faithful after hearing it.
@@ -159,25 +159,25 @@ Pilotika replied, “So it is, priest! So it is! I support the Bhagavān a great
 45\. “After he’s staying in a peaceful place, perhaps under a tree or in an empty and peaceful dwelling, he spreads out his sitting mat and sits down crossed-legged. With correct posture and correct intent, he avoids what’s contrary to mindfulness and puts a stop to longing. Without any arguing, he sees another’s property and requirements for living without longing or wanting them for himself. He purifies his mind and rids it of longing. So it is with hatred, drowsiness, regret, and doubt. It not having any resemblance to good qualities, he purifies his mind and rids it of doubt.
 {:#p45}
 
-46\. “After he has stopped these five hindrances and mental defilements that weaken wisdom, he parts with desires and bad, unwholesome things. With perception and examination, this seclusion gives rise joy and happiness, and he accomplishes the first meditation.
+46\. “After he has stopped these five hindrances and mental defilements that weaken wisdom, he parts with desires and bad, unwholesome things. With perception and examination, this seclusion gives rise joy and happiness, and he accomplishes and dwells in the first dhyāna.
 {:#p46}
 
 47\. “Priest, this is what’s exhausted by the Tathāgata, what’s practiced by the Tathāgata, and what’s worn by the Tathāgata. Still, this isn’t entirely what makes the Bhagavān a Tathāgata, Arhat, and Completely Awakened One, nor why the Bhagavān’s teaching is good and the Tathāgata’s disciples are a noble assembly that’s well destined.
 {:#p47}
 
-48\. “After his perception and examination stops, he’s internally stilled, and his mind is unified. Without perception or examination, samādhi gives rise to joy and happiness, and he accomplishes the second meditation.
+48\. “After his perception and examination stops, he’s internally stilled, and his mind is unified. Without perception or examination, samādhi gives rise to joy and happiness, and he accomplishes and dwells in the second dhyāna.
 {:#p48}
 
 49\. “Priest, this is what’s exhausted by the Tathāgata, what’s practiced by the Tathāgata, and what’s worn by the Tathāgata. Still, this isn’t entirely what makes the Bhagavān a Tathāgata, Arhat, and Completely Awakened One, nor why the Bhagavān’s teaching is good [658a] and the Tathāgata’s disciples are a noble assembly that’s well destined.
 {:#p49}
 
-50\. “He parts with joy and desire, and he is equanimous without further pursuit. With right mindfulness and right knowledge, he personally experiences the happiness that’s described by the nobles and that’s the noble’s equanimity, mindfulness, happy abode, and emptiness. He accomplishes the third meditation.
+50\. “He parts with joy and desire, and he is equanimous without further pursuit. With right mindfulness and right knowledge, he personally experiences the happiness that’s described by the nobles and that’s the noble’s equanimity, mindfulness, happy abode, and emptiness. He accomplishes and dwells in the third dhyāna.
 {:#p50}
 
 51\. “Priest, this is what’s exhausted by the Tathāgata, what’s practiced by the Tathāgata, and what’s worn by the Tathāgata. Still, this isn’t entirely what makes the Bhagavān a Tathāgata, Arhat, and Completely Awakened One, nor why the Bhagavān’s teaching is good and the Tathāgata’s disciples are a noble assembly that’s well destined.
 {:#p51}
 
-52\. “His pleasure and pain ceases. The basis of joy and sorrow having ceased, he is neither discomforted nor delighted. Equanimous, mindful, and pure, he accomplishes the fourth meditation.
+52\. “His pleasure and pain ceases. The basis of joy and sorrow having ceased, he is neither discomforted nor delighted. Equanimous, mindful, and pure, he accomplishes and dwells in the fourth dhyāna.
 {:#p52}
 
 53\. “Priest, this is what’s exhausted by the Tathāgata, what’s practiced by the Tathāgata, and what’s worn by the Tathāgata. Still, this isn’t entirely what makes the Bhagavān a Tathāgata, Arhat, and Completely Awakened One, nor why the Bhagavān’s teaching is good and the Tathāgata’s disciples are a noble assembly that’s well destined.
@@ -216,7 +216,7 @@ Pilotika replied, “So it is, priest! So it is! I support the Bhagavān a great
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 19 June 2022
 {: .revised}
 
 ---
