--- a/01_agama/madhyama/MA_204.md
+++ b/01_agama/madhyama/MA_204.md
@@ -68,7 +68,7 @@ The monks then replied, “Very well, we will accept the teaching and listen.”
 15\. “When that person then pursues the unsurpassed safety of nirvāṇa that lacks illness, they surely can attain the unsurpassed safety of nirvāṇa that lacks illness. When they pursue the unsurpassed safety of nirvāṇa that lacks old age, death, grief and sorrow, and defilement, they surely can attain the unsurpassed safety of nirvāṇa that lacks old age, death, grief and sorrow, and defilement.
 {:#p15}
 
-16\. “Before I awakened to the unsurpassed, right, and complete enlightenment, I also had this thought: ‘I am myself really in a state of illness, and I don’t go against pursuing a state of illness. I am myself really in a state of old age … death … grief and sorrow … defilement and don’t go against pursuing a state of defilement. Perhaps I should pursue the unsurpassed safety of nirvāṇa that lacks illness and pursue the unsurpassed safety of nirvāṇa that lacks old age, death, grief and sorrow, and defilement.’
+16\. “Before I perceived the unsurpassed, right, and complete enlightenment, I also had this thought: ‘I am myself really in a state of illness, and I don’t go against pursuing a state of illness. I am myself really in a state of old age … death … grief and sorrow … defilement and don’t go against pursuing a state of defilement. Perhaps I should pursue the unsurpassed safety of nirvāṇa that lacks illness and pursue the unsurpassed safety of nirvāṇa that lacks old age, death, grief and sorrow, and defilement.’
 {:#p16}
 
 #### Training Under Ārāḍa Kālāma
@@ -81,18 +81,18 @@ The monks then replied, “Very well, we will accept the teaching and listen.”
 
 Ārāḍa replied to me, “Good man, there’s no reason for me not to allow it. If you want to practice, then practice.”
 
-19\. Again, I asked, “Ārāḍa, how did you yourself know, awaken to, and realize this teaching?”
+19\. Again, I asked, “Ārāḍa, how did you yourself know, perceive, and realize this teaching?”
 {:#p19}
 
-Ārāḍa answered, “Good man, I transcended the abode of all consciousness and attained the accomplishment of the abode of nothingness. This was how I myself knew, awakened to, and realized this teaching.”
+Ārāḍa answered, “Good man, I transcended the abode of all consciousness and accomplished and dwelt in the abode of nothingness. This was how I myself knew, perceived, and realized this teaching.”
 
-20\. “Again, I had the thought, “It’s not just Ārāḍa alone who has this faith; I also have this faith. It’s not just Ārāḍa alone who has this effort; I also have this effort. It’s not just Ārāḍa alone who has this wisdom; I also have this wisdom. Ārāḍa himself knows, is awakened to, and has realized this teaching.” I then went alone into seclusion because I wanted to realize this teaching in an empty and peaceful abode. My mind lacking carelessness, I cultivated diligently. After going alone into seclusion in an empty and quiet place, lacking carelessness, and cultivating diligently, it was not long before I attained realization of that teaching.
+20\. “Again, I had the thought, “It’s not just Ārāḍa alone who has this faith; I also have this faith. It’s not just Ārāḍa alone who has this effort; I also have this effort. It’s not just Ārāḍa alone who has this wisdom; I also have this wisdom. Ārāḍa himself knows, is perceived, and has realized this teaching.” I then went alone into seclusion because I wanted to realize this teaching in an empty and peaceful abode. My mind lacking carelessness, I cultivated diligently. After going alone into seclusion in an empty and quiet place, lacking carelessness, and cultivating diligently, it was not long before I attained realization of that teaching.
 {:#p20}
 
-21\. “After realizing that teaching, I again went to Ārāḍa Kālāma and asked him, ‘Ārāḍa, does this teaching that I’ve known, awakened to, and realized for myself transcend the abode of all measureless consciousness and attain the accomplishment of the abode of nothingness?’
+21\. “After realizing that teaching, I again went to Ārāḍa Kālāma and asked him, ‘Ārāḍa, does this teaching that I’ve myself known, perceived, and realized transcend the abode of all measureless consciousness and accomplish the abode of nothingness?’
 {:#p21}
 
-“Ārāḍa Kālāma answered me, ‘Good man, this is the teaching that I’ve known, awakened to, and realized myself that transcends the abode of measureless consciousness and attains the accomplishment of the abode of nothingness.’
+“Ārāḍa Kālāma answered me, ‘Good man, this is the teaching that I’ve myself known, perceived, and realized that transcends the abode of measureless consciousness and accomplishes the abode of nothingness.’
 
 22\. “Ārāḍa Kālāma also said to me, ‘Good man, just as I’ve realized this teaching, you’ve done so, too. Just as you’ve realized this teaching, I’ve done so, too. Come, good man, and lead this assembly with me.’
 {:#p22}
@@ -108,21 +108,21 @@ The monks then replied, “Very well, we will accept the teaching and listen.”
 25\. “Udraka Rāmaputra replied to me, ‘Good man, there’s no reason for me not to allow it. If you want to train, then train.’
 {:#p25}
 
-26\. “Again, I asked, ‘Udraka, what teaching did you Rāmaputra yourself know, awaken to, and realize?’
+26\. “Again, I asked, ‘Udraka, what teaching did you Rāmaputra yourself know, perceive, and realize?’
 {:#p26}
 
-“Udraka Rāmaputra replied to me, ‘Good man, I transcended the abode of all nothingness and attained accomplishment of the abode with neither conception nor no conception. Good man, I Rāmaputra myself have known, awakened to, and realized this teaching.’
+“Udraka Rāmaputra replied to me, ‘Good man, I transcended the abode of all nothingness and accomplished and dwelt in the abode with neither conception nor no conception. Good man, I Rāmaputra myself have known, perceived, and realized this teaching.’
 
-27\. “I again thought, ‘It’s not just Rāmaputra alone who has this faith; I also have this faith. It’s not just Rāmaputra alone who has this effort; I also have this effort. It’s not just Rāmaputra alone who has this wisdom; I also have this wisdom. Rāmaputra himself has known, awakened to, and realized this teaching, so why can’t I know, awaken to, and realize this teaching myself?’
+27\. “I again thought, ‘It’s not just Rāmaputra alone who has this faith; I also have this faith. It’s not just Rāmaputra alone who has this effort; I also have this effort. It’s not just Rāmaputra alone who has this wisdom; I also have this wisdom. Rāmaputra himself has known, perceived, and realized this teaching, so why can’t I know, perceive, and realize this teaching myself?’
 {:#p27}
 
 28\. “I then went alone into seclusion because I wanted to realize this teaching in an empty and peaceful abode. My mind lacking carelessness, I cultivated diligently. After going alone into seclusion in an empty and quiet place, lacking carelessness, and cultivating diligently, it was not long before I attained realization of that teaching.
 {:#p28}
 
-29\. “After realizing that teaching, I again went to Udraka Rāmaputra and asked him, ‘Udraka, is this the teaching that you Rāmaputra have known, awakened to, and realized yourself that transcends the abode of all nothingness and attains the accomplishment of the abode with neither conception nor no conception?’
+29\. “After realizing that teaching, I again went to Udraka Rāmaputra and asked him, ‘Udraka, is this the teaching that you Rāmaputra have known, perceived, and realized that transcends the abode of all nothingness and accomplishes the abode with neither conception nor no conception?’
 {:#p29}
 
-“Udraka Rāmaputra replied to me, ‘Good man, this is the teaching that I Rāmaputra have known, awakened to, and realized that transcends the abode of all nothingness and attains the accomplishment of the abode with neither conception nor no conception.”
+“Udraka Rāmaputra replied to me, ‘Good man, this is the teaching that I Rāmaputra have known, perceived, and realized that transcends the abode of all nothingness and accomplishes the abode with neither conception nor no conception.”
 
 30\. “Udraka also said to me, ‘Just as I Rāmaputra have realized this teaching, you have done so, too. Just as you have realized this teaching, I have done so, too. Come, good man, and lead this assembly together with me.’
 {:#p30}
@@ -146,7 +146,7 @@ The monks then replied, “Very well, we will accept the teaching and listen.”
 
 #### Who Will Be First to Learn the Teaching?
 
-36\. “After I first awakened to the unsurpassed, right, and complete enlightenment, I had the thought, ‘Who will be the first person to whom I’ll explain this teaching?’ Again, I thought, ‘Now, perhaps Ārāḍa Kālāma should be the first to whom I’ll explain this teaching?’
+36\. “After I first perceived the unsurpassed, right, and complete enlightenment, I had the thought, ‘Who will be the first person to whom I’ll explain this teaching?’ Again, I thought, ‘Now, perhaps Ārāḍa Kālāma should be the first to whom I’ll explain this teaching?’
 {:#p36}
 
 37\. “Just then, there was a god in the sky who said to me, ‘Great sage, you should know that it’s now been seven days since Ārāḍa Kālāma’s life ended.’ I also knew for myself that Ārāḍa Kālāma’s life had ended seven days before.
@@ -155,7 +155,7 @@ The monks then replied, “Very well, we will accept the teaching and listen.”
 38\. “I then thought, ‘That man Ārāḍa Kālāma will not hear this teaching because of age’s decay. If he had heard it, he would have quickly known one thing and the next.’
 {:#p38}
 
-39\. “After I first awakened to the unsurpassed, right, and complete enlightenment, I had the thought, ‘Who will be the first person to whom I’ll explain this teaching?’ Again, I thought, ‘Now, perhaps Udraka Rāmaputra should be the first to whom I’ll explain this teaching?’
+39\. “After I first perceived the unsurpassed, right, and complete enlightenment, I had the thought, ‘Who will be the first person to whom I’ll explain this teaching?’ Again, I thought, ‘Now, perhaps Udraka Rāmaputra should be the first to whom I’ll explain this teaching?’
 {:#p39}
 
 40\. “Again, a god in the sky said to me, ‘Great sage, you should know that Udraka Rāmaputra’s life ended two weeks ago.’ I also knew for myself that Udraka Rāmaputra’s life had ended two weeks before.
@@ -164,7 +164,7 @@ The monks then replied, “Very well, we will accept the teaching and listen.”
 41\. “Again, I thought, ‘That man Udraka Rāmaputra will not hear this teaching because of age’s decay. If he had heard this teaching, he would have quickly known one thing and the next.’
 {:#p41}
 
-42\. “After I first awakened to the unsurpassed, right, and complete enlightenment, I had the thought, ‘Who will be the first person to whom I’ll explain this teaching?’ Again, I thought, ‘There were the five monks with whom I was attached to hardship. There were many benefits when I practiced asceticism, and those five monks had attended to me. Now, perhaps those five monks should be the first to whom I’ll explain this teaching?’
+42\. “After I first perceived the unsurpassed, right, and complete enlightenment, I had the thought, ‘Who will be the first person to whom I’ll explain this teaching?’ Again, I thought, ‘There were the five monks with whom I was attached to hardship. There were many benefits when I practiced asceticism, and those five monks had attended to me. Now, perhaps those five monks should be the first to whom I’ll explain this teaching?’
 {:#p42}
 
 43\. “Again, I thought, ‘Where are those five monks now?’ With the clear divine eye that goes beyond that of humans, I saw the five monks staying in Bārāṇasī at Ṛṣipatana in the Deer Preserve. I then stood up under the bodhi tree, gathered my robes, took my bowl, and went to the city of Bārāṇasī.
@@ -256,7 +256,7 @@ That’s never been turned in the world before.’
 61\. “Five monks, they are like the wild deer that gets free of a trap. You should know that it doesn’t follow the hunter and won’t itself make the hunter. The deer won’t fall into the hunter’s hands or get entangled in the hunter’s net, so when the hunter comes it’ll be able to get free. So it is, five monks. The well-versed noble disciple meets good friends, knows the noble teaching, and then they are steered by the noble teaching. They don’t come into contact with these five desires, aren’t defiled, aren’t greedy, and aren’t attached to them. They aren’t conceited and don’t accept or enter them. They see the danger and the escape when taking and making use [of these things]. You should know that they don’t follow corrupt Māra and don’t themselves make Māra. Noble disciples don’t fall into Māra’s hands, get entangled in Māra’s net, and aren’t caught by Māra’s trap. They are freed from Māra’s trap.
 {:#p61}
 
-62\. “Five monks, when a Tathāgata arises in the world who is an Arhat, Rightly and Completely Enlightened One and who’s accomplished in knowledge and conduct, well gone, an understander of the world, an unsurpassed man, a trainer in the principles of the path, a teacher to gods and humans, and who’s called the Buddha, the Blessed One, he ends … the five hindrances, mental defilement, and weakness of wisdom. He parts with desire and parts with bad and unwholesome things … attains the accomplishment of the fourth meditation. Thus, his concentrated mind is pure, without defilement, and without disturbance. It’s flexible and well-abiding, and he attains an imperturbable mental state. He cultivates the end of contaminants and realizes the penetrating knowledges.
+62\. “Five monks, when a Tathāgata arises in the world who is an Arhat, Rightly and Completely Enlightened One and who’s accomplished in knowledge and conduct, well gone, an understander of the world, an unsurpassed man, a trainer in the principles of the path, a teacher to gods and humans, and who’s called the Buddha, the Blessed One, he ends … the five hindrances, mental defilement, and weakness of wisdom. He parts with desire and parts with bad and unwholesome things … accomplishes and dwells in the fourth dhyāna. Thus, his concentrated mind is pure, without defilement, and without disturbance. It’s flexible and well-abiding, and he attains an imperturbable mental state. He cultivates the end of contaminants and realizes the penetrating knowledges.
 {:#p62}
 
 63\. “He knows as it really is, ‘This is suffering.’ He knows as it really is, ‘This is suffering’s accumulation.’ He knows as it really is, ‘This is the suffering’s cessation.’ He knows as it really is, ‘This is the path to suffering’s cessation.’ He knows as it really is, ‘These are contaminants.’ He knows, ‘This is the accumulation of contaminants.’ He knows, ‘This is the cessation of contaminants.’ He knows, ‘This is the path to the cessation of contaminants.’ He thus knows and thus sees liberation from the mind’s contaminants of desire and liberation from the mind’s contaminants of existence and ignorance.
@@ -268,7 +268,7 @@ That’s never been turned in the world before.’
 65\. “Five monks, it’s like a place where there’s no business and no people. A wild deer that’s there goes where it likes, abides as it likes, shelters as it likes, and lies down as it likes. Why is that? That wild deer doesn’t live in the domain of hunters; therefore, it goes as it likes, abides as it likes, shelters as it likes, and lies down as it likes.
 {:#p65}
 
-66\. “Thus, five monks, a monk who ends the contaminants attains the absence of contaminants. His mind is liberated, and his wisdom is liberated. He knows, awakens, and realizes that accomplishment for himself: ‘Birth has ended, the religious practice has been established, and the task has been accomplished. I’m no longer subject to existence and know it as it really is.’ At that point, he practices as he likes, abides as he likes, sits as he likes, and lies down as he likes. Why is that? He sees for himself that measureless bad and unwholesome things are ended; therefore, he practices as he likes, abides as he likes, sits as he likes, and lies down as he likes.
+66\. “Thus, five monks, a monk who ends the contaminants attains the absence of contaminants. His mind is liberated, and his wisdom is liberated. He accomplishes and dwells in his own knowledge, perception, and realization: ‘Birth has been ended, the religious practice has been established, the task has been accomplished. I truly know that I’m no longer subject to existence.’ At that point, he practices as he likes, abides as he likes, sits as he likes, and lies down as he likes. Why is that? He sees for himself that measureless bad and unwholesome things are ended; therefore, he practices as he likes, abides as he likes, sits as he likes, and lies down as he likes.
 {:#p66}
 
 67\. “Five monks, this is the teaching of liberation without remainder. This is the teaching of the unsurpassed safety of nirvāṇa without illness. This is the teaching of the unsurpassed safety of nirvāṇa without old age … death … grief and sorrow … defilement.”
@@ -285,7 +285,7 @@ That’s never been turned in the world before.’
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 19 June 2022
 {: .revised}
 
 ---
