--- a/01_agama/madhyama/MA_210.md
+++ b/01_agama/madhyama/MA_210.md
@@ -183,13 +183,13 @@ Hearing this, the laywoman Viśākhā praised it, “Good, Noble one! Good!” A
 28\. The nun Dharmadinnā answered, “Not all pleasant feelings have desire as their tendency. Not all painful feelings have anger as their tendency. Not all neither painful nor pleasant feelings have ignorance as their tendency.
 {:#p28}
 
-29\. “What pleasant feeling doesn’t have desire as its tendency? Suppose a monk is secluded from desire and secluded from bad and unskillful things. With perception and examination, that seclusion gives rise to joy and happiness, and he achieves the first dhyāna. This is called pleasant feeling that doesn’t have desire as its tendency. Why is that? Because this feeling stops desire.
+29\. “What pleasant feeling doesn’t have desire as its tendency? Suppose a monk is secluded from desire and secluded from bad and unskillful things. With perception and examination, that seclusion gives rise to joy and happiness, and he accomplishes and dwells in the first dhyāna. This is called pleasant feeling that doesn’t have desire as its tendency. Why is that? Because this feeling stops desire.
 {:#p29}
 
 30\. “What painful feeling doesn’t have anger as its tendency? If one pursues the higher pleasure of liberation, the dejection from that pursuit gives rise to sorrow and pain. This is said to be painful feeling that doesn’t have anger as its tendency. Why is that? Because this feeling stops anger.
 {:#p30}
 
-31\. “What neither painful nor pleasant feeling doesn’t have ignorance as its tendency? When pleasure ceases and pain ceases, then the roots of joy and sorrow have ceased. Neither pained nor delighted, one is equanimous, mindful, and pure, and they achieve the fourth dhyāna. This is called neither painful nor pleasant feeling that doesn’t have ignorance as its tendency. Why is that? Because this feeling stops ignorance.”
+31\. “What neither painful nor pleasant feeling doesn’t have ignorance as its tendency? When pleasure ceases and pain ceases, then the roots of joy and sorrow have ceased. Neither pained nor delighted, one is equanimous, mindful, and pure, and they accomplish and dwell in the fourth dhyāna. This is called neither painful nor pleasant feeling that doesn’t have ignorance as its tendency. Why is that? Because this feeling stops ignorance.”
 {:#p31}
 
 Hearing this, the laywoman Viśākhā praised it, “Good, Noble one! Good!” After praising her, the laywoman Viśākhā rejoiced and approved.
@@ -267,7 +267,7 @@ The nun Dharmadinnā answered, “Madam, you’re asking about an endless subjec
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 19 June 2022
 {: .revised}
 
 ---
