--- a/01_agama/madhyama/MA_076.md
+++ b/01_agama/madhyama/MA_076.md
@@ -14,7 +14,7 @@ next: MA_077.html
 1\. Thus I have heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to [Ugracelā] and stayed on the shore of Gaṅgā Lake.
 {: #p1}
 
-2\. It was then that a monk rose from sitting in reflection in the afternoon and went to the Buddha. He bowed his head at the Buddha’s feet, withdrew to sit to one side, and said, “Bhagavān, please teach for me the essentials of the Dharma. After hearing the teaching from the Bhagavān, I’ll live alone in seclusion, my mind will be without carelessness, and I’ll cultivate diligence. As a result of living alone in seclusion, my mind being without carelessness, and cultivating diligence, I’ll become a clansman who shaves off his beard and hair, puts on the reddish-brown robes, becomes faithful, leaves home, goes homeless, and trains on the path. When the unsurpassed religious practice is finished, then I’ll know and recognize for myself the accomplishment of self-realization in the present life: ‘Birth has been ended, the religious practice has been established, and the task has been accomplished.’ I’ll no longer be subject to existence and know it as it really is.”
+2\. It was then that a monk rose from sitting in reflection in the afternoon and went to the Buddha. He bowed his head at the Buddha’s feet, withdrew to sit to one side, and said, “Bhagavān, please teach for me the essentials of the Dharma. After hearing the teaching from the Bhagavān, I’ll live alone in seclusion, my mind will be without carelessness, and I’ll cultivate diligence. As a result of living alone in seclusion, my mind being without carelessness, and cultivating diligence, I’ll become a clansman who shaves off his beard and hair, puts on the reddish-brown robes, becomes faithful, leaves home, goes homeless, and trains on the path. When the unsurpassed religious practice is finished, then I’ll accomplish and dwell in my own knowledge, perception, and realization: ‘Birth has been ended, the religious practice has been established, the task has been accomplished. I truly know that I’m no longer subject to existence.’”
 {: #p2}
 
 3\. The Bhagavān told him, “Monk, you should thus train: ‘Let my mind abide in an inner and unperturbed cultivation of measureless goodness.’ Again, contemplate the inner body as body, applying the utmost diligence. Establishing right mindfulness and right knowledge, well steer your own mind; make it free of greed and without grief.
@@ -77,23 +77,26 @@ next: MA_077.html
 22\. “Furthermore, you should cultivate samādhi with perception and examination, samādhi with no perception and some examination, and samādhi without perception or examination. You should also cultivate samādhi together with joy, samādhi together with happiness, samādhi together with samādhi, and samādhi together with equanimity.
 {: #p22}
 
-23\. “Monk, suppose you cultivate these samādhis of utmost goodness. Monk, you pervade one direction with your mind together with kindness. You do so in two, three, and four directions, the four counterpoints, and up and down. You completely pervade them all with their mind together with kindness without bondage, without enmity, without anger, and without quarrel. It’s broadly, greatly, and measurelessly well cultivated, and you accomplish the filling of the whole world. Thus, your mind together with compassion, joy, and equanimity is without bondage, without enmity, without anger, and without quarrel. It’s broadly, greatly, and measurelessly well cultivated, and you accomplish the filling of the whole world.
+23\. “Monk, suppose someone cultivates these samādhis of utmost goodness. Monk, they accomplish and dwell in one direction pervaded with mind and kindness. They do this in two, three, and four directions, the four counterpoints, up, and down, pervading everywhere with their mind and kindness. Having no bonds, enmity, anger, or quarrel, they accomplish and dwell in pervading the whole world, [their mind being] broad and vast, measureless, and well cultivated.
 {: #p23}
 
-24\. “Monk, suppose you cultivate these samādhis of utmost goodness. If you travel east, you’ll surely attain well-being and not have any distress. If you travel south, west, or north, you’ll surely attain well-being and not have any distress. Monk, if you cultivate these samādhis and the utmost goodness, then even if I did not say you abide in good qualities, how could I say they would decline? Day and night, those good qualities will only grow and not decline.
+24\. “So it is with compassion, joy, and equanimity. Having no bonds, enmity, anger, or quarrel, they accomplish and dwell in pervading the whole world, [their mind being] broad and vast, measureless, and well cultivated.
 {: #p24}
 
-25\. “Monk, if you cultivate these samādhis of utmost goodness, you’ll surely attain one of two fruits. You might attain ultimate knowledge in the present life, or you might instead become a non-returner with some remainder.”
+25\. “Monk, suppose you cultivate these samādhis of utmost goodness. If you travel east, you’ll surely attain well-being and not have any distress. If you travel south, west, or north, you’ll surely attain well-being and not have any distress. Monk, if you cultivate these samādhis and the utmost goodness, then even if I did not say you abide in good qualities, how could I say they would decline? Day and night, those good qualities will only grow and not decline.
 {: #p25}
 
-26\. Hearing what the Buddha taught, that monk well accepted and well retained it. He then rose from his seat, bowed his head at the Buddha’s feet, circled him three times, and left. Having accepted and retained the Buddha’s instructions, he went to live alone in seclusion, his mind was without carelessness, and he cultivated diligence. As a result of living alone in seclusion, his mind being without carelessness, and cultivating diligence, he became a clansman. He shaved off his beard and hair, put on the reddish-brown robes, became faithful, left home, went homeless, and trained on the path.
+26\. “Monk, if you cultivate these samādhis of utmost goodness, you’ll surely attain one of two fruits. You might attain ultimate knowledge in the present life, or you might instead become a non-returner with some remainder.”
 {: #p26}
 
-27\. It was only when the unsurpassed religious practice was finished that he knew and recognized for himself the accomplishment of self-realization in the present life: ‘Birth has been ended, the religious practice has been established, and the task has been accomplished.’ He was no longer subject to existence and knew it as it really was. After knowing the Dharma, that venerable became an arhat.
+27\. Hearing what the Buddha taught, that monk well accepted and well retained it. He then rose from his seat, bowed his head at the Buddha’s feet, circled him three times, and left. Having accepted and retained the Buddha’s instructions, he went to live alone in seclusion, his mind was without carelessness, and he cultivated diligence. As a result of living alone in seclusion, his mind being without carelessness, and cultivating diligence, he became a clansman. He shaved off his beard and hair, put on the reddish-brown robes, became faithful, left home, went homeless, and trained on the path.
 {: #p27}
 
-28\. The Buddha spoke thus. Those monks who heard what the Buddha taught rejoiced and approved.
+28\. It was only when the unsurpassed religious practice was finished that he accomplished and dwelt in his own knowledge, perception, and realization: ‘Birth has been ended, the religious practice has been established, the task has been accomplished. I truly know that I’m no longer subject to existence.’ After knowing the Dharma, that venerable became an arhat.
 {: #p28}
+
+29\. The Buddha spoke thus. Those monks who heard what the Buddha taught rejoiced and approved.
+{: #p29}
 
 ### Notes
 1. {: #n1} Parallels include [AN 8.63](https://suttacentral.net/an8.63){: target="_blank"} and [SN 47.3](https://suttacentral.net/sn47.3){: target="_blank"}. [\[Back\]](#ref1)
@@ -102,7 +105,7 @@ next: MA_077.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 19 June 2022
 {: .revised}
 
 ---
