--- a/01_agama/madhyama/MA_079.md
+++ b/01_agama/madhyama/MA_079.md
@@ -65,16 +65,16 @@ Venerable Aniruddha told him, “Wealthy man, you give your own answer to this q
 14\. Ṛṣidatta said, “Venerable Aniruddha, these two liberations of the great mind and the measureless mind are the same in meaning but different in name, but the wealthy man Ṛṣidatta isn’t the one to answer this question.”
 {: #p14}
 
-15\. Venerable Aniruddha told him, “Wealthy man, permit me to explain the liberations of the great mind and measureless mind for you. Regarding the liberation of the great mind, suppose an ascetic or priest stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. Based on a single tree, their thinking is freed, and they accomplish the filling of it with the liberation of the great mind. Their mind is liberated to that extent and doesn’t go beyond it. If they don’t base it on one tree, they base it on two or three trees. Their thinking is freed, and they accomplish the filling of it with the liberation of the great mind. Their mind is liberated to that extent and doesn’t go beyond it.
+15\. Venerable Aniruddha told him, “Wealthy man, permit me to explain the liberations of the great mind and measureless mind for you. Regarding the liberation of the great mind, suppose an ascetic or priest stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. They are intent on accomplishing and dwelling in the liberation of the great mind, pervading a single tree with it. Their mind is liberated to that extent and doesn’t go beyond it. If they don’t base it on one tree, then they are intent on accomplishing and dwelling the liberation of the great mind, pervading two or three trees with it. Their mind is liberated to that extent and doesn’t go beyond it.
 {: #p15}
 
-16\. “If they don’t base it on two or three trees, they base it on one grove. If they don’t base it on one grove, they base it on two or three groves. If they don’t base it on two or three groves, they base it on one village. If they don’t base it on one village, they base it on two or three villages. If they don’t base it on two or three villages, they base it on one country. If they don’t base it on one country, they base it on two or three countries. If they don’t base it on two or three countries, they base it on the Earth up to the ocean. Their thinking is freed, and they accomplish the filling of it with the liberation of the great mind. Their mind is liberated to that extent and doesn’t go beyond it. This is called the liberation of the great mind.
+16\. “If they don’t base it on two or three trees, they base it on one grove. If they don’t base it on one grove, they base it on two or three groves. If they don’t base it on two or three groves, they base it on one village. If they don’t base it on one village, they base it on two or three villages. If they don’t base it on two or three villages, they base it on one country. If they don’t base it on one country, they base it on two or three countries. If they don’t base it on two or three countries, they base it on the Earth up to the ocean. They are intent on accomplishing and dwelling in the liberation of the great mind, pervading the ocean with it. Their mind is liberated to that extent and doesn’t go beyond it. This is called the liberation of the great mind.
 {: #p16}
 
-17\. “Wealthy man, what is the liberation of measureless mind? Suppose an ascetic or priest stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. They pervade one direction with their mind together with kindness. They do so in two, three, and four directions, the four counterpoints, and up and down. They completely pervade them all with their mind together with kindness without bondage, without enmity, without anger, and without quarrel. It’s broadly, greatly, and measurelessly well cultivated, and they accomplish the filling of the whole world.
+17\. “Wealthy man, what is the liberation of measureless mind? Suppose an ascetic or priest stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. They accomplish and dwell in one direction pervaded with their mind and kindness. They do this in two, three, and four directions, the four counterpoints, up, and down, pervading everywhere with their mind and kindness. Having no bonds, enmity, anger, or quarrel, they accomplish and dwell in pervading the whole world, [their mind being] broad and vast, measureless, and well cultivated.
 {: #p17}
 
-18\. “Thus, their mind together with compassion, joy, and equanimity is without bondage, without enmity, without anger, and without quarrel. It’s broadly, greatly, and measurelessly well cultivated, and they accomplish the filling of the whole world. This is called the liberation of measureless mind.
+18\. “So it is with compassion, joy, and equanimity. Having no bonds, enmity, anger, or quarrel, they accomplish and dwell in pervading the whole world, [their mind being] broad and vast, measureless, and well cultivated. This is called the liberation of the measureless mind.
 {: #p18}
 
 19\. “Wealthy man, are these two liberations of the great mind and the measureless mind different both in meaning and name, or are they the same in meaning but different in name?”
@@ -104,18 +104,18 @@ Venerable Aniruddha replied, “Good man, Kātyāyana, you can say that the rela
 25\. Venerable True Kātyāyana asked, “Venerable Aniruddha, what are the causes and conditions for knowing the relative superiority of those radiance gods that are born in the same place, whether they’re marvelous or not marvelous?”
 {: #p25}
 
-26\. Venerable Aniruddha replied, “Good man, Kātyāyana, suppose an ascetic or priest stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. Based on one tree, their thinking is freed, and they accomplish a perception of radiance. Their mind forms the perception of radiance, and it’s completely filled. Their mind is liberated to that extent and doesn’t go beyond it. If they don’t base it on one tree, they base it on two or three trees. Their thinking is freed, and they accomplish a perception of radiance. Their mind forms the perception of radiance, and it’s completely filled. Their mind is liberated to that extent and doesn’t go beyond it.
+26\. Venerable Aniruddha replied, “Good man, Kātyāyana, suppose an ascetic or priest stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. They are intent on accomplishing and dwelling in a perception of radiance, pervading a single tree with it. Their mind forms a perception of radiance, and it’s completely filled. Their mind is liberated to that extent and doesn’t go beyond it. If they don’t base it on one tree, then they are intent on accomplishing and dwelling in a perception of radiance, pervading two or three trees with it. Their mind forms a perception of radiance, and it’s completely filled. Their mind is liberated to that extent and doesn’t go beyond it.
 {: #p26}
 
 27\. “Good man, Kātyāyana, which of these two liberations of mind is higher, greater, marvelous, and best?”
 {: #p27}
 
-Venerable True Kātyāyana replied, “Venerable Aniruddha, suppose there’s an ascetic or priest who doesn’t base it on one tree but bases it on two or three trees. Their thinking is freed, and they accomplish a perception of radiance. Their mind forms the perception of radiance, and it’s completely filled. Their mind is liberated to that extent and doesn’t go beyond it. Venerable Aniruddha, of those two liberations, this liberation is higher, greater, marvelous, and best.”
+Venerable True Kātyāyana replied, “Venerable Aniruddha, suppose there’s an ascetic or priest who doesn’t base it on one tree, then they are intent on accomplishing and dwelling in a perception of radiance, pervading two or three trees with it. Their mind forms a perception of radiance, and it’s completely filled. Their mind is liberated to that extent and doesn’t go beyond it. Venerable Aniruddha, of those two liberations, this liberation is higher, greater, marvelous, and best.”
 
-28\. Venerable Aniruddha also asked, “Good man, Kātyāyana, suppose they don’t base it on two or three trees but base it on one grove. Suppose they don’t base it on one grove but base it on two or three groves. Suppose they don’t base it on two or three groves but base it on one village. Suppose they don’t base it on one village but base it on two or three villages. Suppose they don’t base it on two or three villages but base it on one country. Suppose they don’t base it on one country but base it on two or three countries. Suppose they don’t base it on two or three countries but base it on the Earth up to the ocean. Their thinking is freed, and they accomplish a perception of radiance. Their mind forms the perception of radiance, and it’s completely filled. Their mind is liberated to that extent and doesn’t go beyond it. Good man, Kātyāyana, which of these pairs of liberations are higher, greater, marvelous, and best?”
+28\. Venerable Aniruddha also asked, “Good man, Kātyāyana, suppose they don’t base it on two or three trees but base it on one grove. Suppose they don’t base it on one grove but base it on two or three groves. Suppose they don’t base it on two or three groves but base it on one village. Suppose they don’t base it on one village but base it on two or three villages. Suppose they don’t base it on two or three villages but base it on one country. Suppose they don’t base it on one country but base it on two or three countries. Suppose they don’t base it on two or three countries but base it on the Earth up to the ocean. They are intent on accomplishing and dwelling in a perception of radiance, pervading the ocean with it. Their mind forms a perception of radiance, and it’s completely filled. Their mind is liberated to that extent and doesn’t go beyond it. Good man, Kātyāyana, which of these pairs of liberations are higher, greater, marvelous, and best?”
 {: #p28}
 
-29\. Venerable True Kātyāyana replied, “Venerable Aniruddha, suppose there is an ascetic or priest who doesn’t base it on two or three trees but bases it on one grove. Suppose they don’t base it on one grove but base it on two or three groves. Suppose they don’t base it on two or three groves but base it on one village. Suppose they don’t base it on one village but base it on two or three villages. Suppose they don’t base it on two or three villages but base it on one country. Suppose they don’t base it on one country but base it on two or three countries. Suppose they don’t base it on two or three countries but base it on the Earth up to the ocean. Their thinking is freed, and they accomplish a perception of radiance. Their mind forms the perception of radiance, and it’s completely filled. Their mind is liberated to that extent and doesn’t go beyond it. Venerable Aniruddha, of those pairs of liberations, this liberation is higher, greater, marvelous, and best.”
+29\. Venerable True Kātyāyana replied, “Venerable Aniruddha, suppose there is an ascetic or priest who doesn’t base it on two or three trees but bases it on one grove. Suppose they don’t base it on one grove but base it on two or three groves. Suppose they don’t base it on two or three groves but base it on one village. Suppose they don’t base it on one village but base it on two or three villages. Suppose they don’t base it on two or three villages but base it on one country. Suppose they don’t base it on one country but base it on two or three countries. Suppose they don’t base it on two or three countries but base it on the Earth up to the ocean. They are intent on accomplishing and dwelling in a perception of radiance, pervading the ocean with it. Their mind forms a perception of radiance, and it’s completely filled. Their mind is liberated to that extent and doesn’t go beyond it. Venerable Aniruddha, of those pairs of liberations, this liberation is higher, greater, marvelous, and best.”
 {: #p29}
 
 30\. Venerable Aniruddha told him, “Kātyāyana, these are the causes and conditions for knowing the relative superiority of those radiance gods that are born in the same place, whether they’re marvelous or not marvelous. What’s the reason for that? A person’s cultivation is fine or coarse because of the relative superiority of their mind. We find a person to be superior because their cultivation is fine or coarse. Good man, Kātyāyana, the Bhagavān also says this about the relative superiority of people.”
@@ -129,48 +129,48 @@ Venerable Aniruddha replied, “Good man, Kātyāyana, you can say that the rela
 32\. Venerable True Kātyāyana also asked, “Venerable Aniruddha, what are the causes and conditions for knowing the relative superiority of those pure radiance gods that are born in the same place, whether they’re marvelous or not marvelous?”
 {: #p32}
 
-33\. Venerable Aniruddha replied, “Good man, Kātyāyana, suppose there’s an ascetic or priest who stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. Their thinking is freed, and they accomplish the pervasiveness of the pure radiance gods. This samādhi of theirs isn’t cultivated, isn’t studied, isn’t broad, and isn’t fully accomplished. Afterward, when their body breaks up and their life ends, they’re born among the pure radiance gods. After being born there, they don’t attain the highest calm, highest peace, or the final end of their lives.
+33\. Venerable Aniruddha replied, “Good man, Kātyāyana, suppose there’s an ascetic or priest who stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. They are intent on accomplishing and dwelling in the pervasiveness of the pure radiance gods. This samādhi of theirs isn’t cultivated, isn’t studied, isn’t broad, and isn’t fully accomplished. Afterward, when their body breaks up and their life ends, they’re born among the pure radiance gods. After being born there, they don’t attain the highest calm, highest peace, or the final end of their lives.
 {: #p33}
 
 34\. “Good man, Kātyāyana, it’s similar to the blue lotus and the crimson, red, and white lotuses, which are born of water and grow in water. While they’re at the bottom of a pond, their roots, stems, leaves, and flowers are all wet with clean water, moistened by that water, and no part of them isn’t wet.
 {: #p34}
 
-35\. “Good man, Kātyāyana, suppose there’s an ascetic or priest who stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. Their thinking is freed, and they accomplish the pervasiveness of the pure radiance gods. This samādhi of theirs isn’t cultivated, isn’t studied, isn’t broad, and isn’t fully accomplished. Afterward, when their body breaks up and their life ends, they’re born among the pure radiance gods. After being born there, they don’t attain the highest calm, highest peace, or the final end of their lives.
+35\. “Good man, Kātyāyana, suppose there’s an ascetic or priest who stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. They are intent on accomplishing and dwelling in the pervasiveness of the pure radiance gods. This samādhi of theirs isn’t cultivated, isn’t studied, isn’t broad, and isn’t fully accomplished. Afterward, when their body breaks up and their life ends, they’re born among the pure radiance gods. After being born there, they don’t attain the highest calm, highest peace, or the final end of their lives.
 {: #p35}
 
-36\. “Good man, Kātyāyana, there’s another ascetic or priest whose thinking is freed, and they accomplish the pervasiveness of the pure radiance gods. This samādhi of theirs is frequently cultivated, frequently studied, frequently broadened, and fully accomplished. Afterward, when their body breaks up and their life ends, they’re born among the pure radiance gods. After being born there, they attain the highest calm, highest peace, and the final end of their lives.
+36\. “Good man, Kātyāyana, there’s another ascetic or priest who’s intent on accomplishing and dwelling in the pervasiveness of the pure radiance gods. This samādhi of theirs is frequently cultivated, frequently studied, frequently broadened, and fully accomplished. Afterward, when their body breaks up and their life ends, they’re born among the pure radiance gods. After being born there, they attain the highest calm, highest peace, and the final end of their lives.
 {: #p36}
 
 37\. “Good man, Kātyāyana, it’s similar to the blue lotus and the crimson, red, and white lotuses, which are born of water and grow in water. They emerge from the water and float on top where the water doesn’t wet them.
 {: #p37}
 
-38\. “Good man, Kātyāyana, so it is that another ascetic or priest stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. Their thinking is freed, and they accomplish the pervasiveness of the pure radiance gods. This samādhi of theirs is frequently cultivated, frequently studied, frequently broadened, and fully accomplished. Afterward, when their body breaks up and their life ends, they’re born among the pure radiance gods. After being born there, they attain the highest calm, highest peace, and the final end of their lives.
+38\. “Good man, Kātyāyana, so it is that another ascetic or priest stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. They are intent on accomplishing and dwelling in the pervasiveness of the pure radiance gods. This samādhi of theirs is frequently cultivated, frequently studied, frequently broadened, and fully accomplished. Afterward, when their body breaks up and their life ends, they’re born among the pure radiance gods. After being born there, they attain the highest calm, highest peace, and the final end of their lives.
 {: #p38}
 
 39\. “Good man, Kātyāyana, these are the causes and conditions for knowing the relative superiority of those pure radiance gods that are born in the same place, whether they’re marvelous or not marvelous. What is the reason for that? A person’s cultivation is fine or coarse because of the relative superiority of their mind. We find a person to be superior because their cultivation is fine or coarse. Good man, Kātyāyana, the Bhagavān also says this about the relative superiority of people.”
 {: #p39}
 
-40\. Venerable True Kātyāyana also asked, “Venerable Aniruddha, is it possible to know the relative superiority of those pervasively pure radiance gods that are born in the same place, whether they’re marvelous or not marvelous?”
+40\. Venerable True Kātyāyana also asked, “Venerable Aniruddha, is it possible to know the relative superiority of those completely pure radiance gods that are born in the same place, whether they’re marvelous or not marvelous?”
 {: #p40}
 
-Venerable Aniruddha replied, “Good man, Kātyāyana, you can say that the relative superiority of those pervasively pure radiance gods that are born in the same place is known, whether they’re marvelous or not marvelous.”
+Venerable Aniruddha replied, “Good man, Kātyāyana, you can say that the relative superiority of those completely pure radiance gods that are born in the same place is known, whether they’re marvelous or not marvelous.”
 
-41\. Venerable True Kātyāyana also asked, “Venerable Aniruddha, what are the causes and conditions for knowing the relative superiority of those pervasively pure radiance gods who are born in one place, whether they’re marvelous or not marvelous?”
+41\. Venerable True Kātyāyana also asked, “Venerable Aniruddha, what are the causes and conditions for knowing the relative superiority of those completely pure radiance gods who are born in one place, whether they’re marvelous or not marvelous?”
 {: #p41}
 
-42\. Venerable Aniruddha replied, “Good man, Kātyāyana, suppose an ascetic or priest stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. Their thinking is freed, and they accomplish the pervasiveness of the pervasively pure radiance gods. They don’t quite stop drowsiness and don’t skillfully calm restlessness and remorse. Afterward, when their body breaks up and their life ends, they are born among the pervasively pure radiance gods. After being born there, their light isn’t quite pure.
+42\. Venerable Aniruddha replied, “Good man, Kātyāyana, suppose an ascetic or priest stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. They are intent on accomplishing and dwelling in the pervasiveness of the completely pure radiance gods. They don’t quite stop drowsiness and don’t skillfully calm restlessness and remorse. Afterward, when their body breaks up and their life ends, they are born among the completely pure radiance gods. After being born there, their light isn’t quite pure.
 {: #p42}
 
-43\. “Good man, Kātyāyana, it’s like a burning lamp that’s conditioned by its oil and wick. If the oil has dirt or the wick isn’t pure, this causes the lamp’s light to become dim or unclear. Good man, Kātyāyana, so it is if an ascetic or priest stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. Their thinking is freed, and they accomplish the pervasiveness of the pervasively pure radiance gods. They don’t quite stop drowsiness and don’t skillfully calm restlessness and remorse. Afterward, when their body breaks up and their life ends, they are born among the pervasively pure radiance gods. After being born there, their light isn’t quite pure.
+43\. “Good man, Kātyāyana, it’s like a burning lamp that’s conditioned by its oil and wick. If the oil has dirt or the wick isn’t pure, this causes the lamp’s light to become dim or unclear. Good man, Kātyāyana, so it is if an ascetic or priest stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. They are intent on accomplishing and dwelling in the pervasiveness of the completely pure radiance gods. They don’t quite stop drowsiness and don’t skillfully calm restlessness and remorse. Afterward, when their body breaks up and their life ends, they are born among the completely pure radiance gods. After being born there, their light isn’t quite pure.
 {: #p43}
 
-44\. “Good man, Kātyāyana, another ascetic or priest stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. Their thinking is freed, and they accomplish the pervasiveness of the pervasively pure radiance gods. They fully stop drowsiness and skillfully calm restlessness and remorse. Afterward, when their body breaks up and their life ends, they are born among the pervasively pure radiance gods. After being born there, their light is fully bright and pure.
+44\. “Good man, Kātyāyana, another ascetic or priest stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. They are intent on accomplishing and dwelling in the pervasiveness of the completely pure radiance gods. They fully stop drowsiness and skillfully calm restlessness and remorse. Afterward, when their body breaks up and their life ends, they are born among the completely pure radiance gods. After being born there, their light is fully bright and pure.
 {: #p44}
 
-45\. “Good man, Kātyāyana, it’s like a burning lamp that’s conditioned by its oil and wick. If the oil has no dirt and the wick is also fully pure, this causes the lamp’s light to become fully bright and pure. Good man, Kātyāyana, so it is that another ascetic or priest stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. Their thinking is freed, and they accomplish the pervasiveness of the pervasively pure radiance gods. They fully stop drowsiness and skillfully calm restlessness and remorse. Afterward, when their body breaks up and their life ends, they are born among the pervasively pure radiance gods. After being born there, their light is fully bright and pure.
+45\. “Good man, Kātyāyana, it’s like a burning lamp that’s conditioned by its oil and wick. If the oil has no dirt and the wick is also fully pure, this causes the lamp’s light to become fully bright and pure. Good man, Kātyāyana, so it is that another ascetic or priest stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. They are intent on accomplishing and dwelling in the pervasiveness of the completely pure radiance gods. They fully stop drowsiness and skillfully calm restlessness and remorse. Afterward, when their body breaks up and their life ends, they are born among the completely pure radiance gods. After being born there, their light is fully bright and pure.
 {: #p45}
 
-46\. “Good man, Kātyāyana, these are the causes and conditions for knowing the relative superiority of those pervasively pure radiance gods who are born in the same place, whether they’re marvelous or not marvelous. What’s the reason for that? A person’s cultivation is fine or coarse because of the relative superiority of their mind. We find a person to be superior because their cultivation is fine or coarse. Good man, Kātyāyana, the Bhagavān also says this about the relative superiority of people.”
+46\. “Good man, Kātyāyana, these are the causes and conditions for knowing the relative superiority of those completely pure radiance gods who are born in the same place, whether they’re marvelous or not marvelous. What’s the reason for that? A person’s cultivation is fine or coarse because of the relative superiority of their mind. We find a person to be superior because their cultivation is fine or coarse. Good man, Kātyāyana, the Bhagavān also says this about the relative superiority of people.”
 {: #p46}
 
 #### Conclusion
@@ -196,7 +196,7 @@ Venerable Aniruddha replied, “Good man, Kātyāyana, you can say that the rela
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 19 June 2022
 {: .revised}
 
 ---
